--- a/CMS/package.json
+++ b/CMS/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "react-router-dom": "^6.11.2"
   }
 }
