Create menu component(CMS)

--- a/Store/.prettierrc
+++ b/Store/.prettierrc
@@ -1,11 +1,19 @@
 {
-	"printWidth": 100,
-	"useTabs": true,
-	"tabWidth": 4,
-	"trailingComma": "es5",
-	"arrowParens": "always",
-	"semi": true,
-	"singleQuote": true,
-	"bracketSpacing": false,
-	"endOfLine": "auto"
+  "arrowParens": "always",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
+  "embeddedLanguageFormatting": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "jsxSingleQuote": false,
+  "printWidth": 80,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false,
+  "vueIndentScriptAndStyle": false
 }
