--- a/CMS/package.json
+++ b/CMS/package.json
@@ -8,15 +8,20 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/parser": "^7.21.8",
     "@babel/plugin-transform-react-jsx": "^7.21.5",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
