--- a/CMS/package.json
+++ b/CMS/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "axios": "^1.4.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "prop-types": "^15.8.1",
