--- a/CMS/package.json
+++ b/CMS/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
