--- a/CMS/package.json
+++ b/CMS/package.json
@@ -26,9 +26,12 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.63.6",
+    "sweetalert2": "^11.7.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
