--- a/Terminal/package.json
+++ b/Terminal/package.json
@@ -9,9 +9,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "axios": "^1.4.0",
+    "qr-scanner": "^1.4.2",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-qr-code": "^2.0.11",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
