--- a/CMS/package.json
+++ b/CMS/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.6",
+    "socket.io-client": "^4.7.1",
     "sweetalert2": "^11.7.16",
     "web-vitals": "^2.1.4"
   },
