--- a/CMS/package.json
+++ b/CMS/package.json
@@ -1,72 +1,72 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@amcharts/amcharts5": "^5.3.16",
-    "@ant-design/icons": "^5.1.2",
-    "@babel/core": "^7.21.8",
-    "@babel/eslint-parser": "^7.18.2",
-    "@babel/parser": "^7.21.8",
-    "@babel/plugin-transform-react-jsx": "^7.21.5",
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "axios": "^1.4.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.2",
-    "chart.js": "^4.3.0",
-    "crypto-browserify": "^3.12.0",
-    "generate-password": "^1.7.0",
-    "moment": "^2.29.4",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
-    "react-tooltip": "^5.13.1",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "sass": "^1.63.6",
-    "socket.io-client": "^4.7.1",
-    "sweetalert2": "^11.7.16",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint -c .eslintrc.js --ext .js,.jsx .",
-    "lint:fix": "npm run lint -- --fix"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.8",
-    "react-router-dom": "^6.11.2"
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@amcharts/amcharts5": "^5.3.16",
+		"@ant-design/icons": "^5.1.2",
+		"@babel/core": "^7.21.8",
+		"@babel/eslint-parser": "^7.18.2",
+		"@babel/parser": "^7.21.8",
+		"@babel/plugin-transform-react-jsx": "^7.21.5",
+		"@fortawesome/fontawesome-free": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"axios": "^1.4.0",
+		"babel-eslint": "^10.1.0",
+		"babel-loader": "^9.1.2",
+		"chart.js": "^4.3.0",
+		"crypto-browserify": "^3.12.0",
+		"generate-password": "^1.7.0",
+		"moment": "^2.29.4",
+		"prop-types": "^15.8.1",
+		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.10.1",
+		"react-redux": "^8.0.5",
+		"react-scripts": "5.0.1",
+		"react-toastify": "^9.1.3",
+		"react-tooltip": "^5.13.1",
+		"redux": "^4.2.1",
+		"redux-thunk": "^2.4.2",
+		"sass": "^1.63.6",
+		"socket.io-client": "^4.7.1",
+		"sweetalert2": "^11.7.16",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "set PORT=3001 && react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"lint": "eslint -c .eslintrc.js --ext .js,.jsx .",
+		"lint:fix": "npm run lint -- --fix"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"prettier": "^2.8.8",
+		"react-router-dom": "^6.11.2"
+	}
 }
